syntax = "proto3";
package types;

option go_package = "github.com/ginchuco/ginchu/lib";

import "google/protobuf/any.proto";

message Transaction {
  google.protobuf.Any msg = 1;
  Signature signature = 2;
  uint64 sequence = 3;
  uint64 fee = 4;
}

message TxResult {
  bytes sender = 1;
  bytes recipient = 2;
  string message_type = 3;
  uint64 height = 4;
  uint64 index = 5;
  Transaction transaction = 6;
  string tx_hash = 7;
}

message Signature {
  bytes public_key = 1;
  bytes signature = 2;
}