syntax = "proto3";
package types;

option go_package = "github.com/ginchuco/ginchu/types";

import "google/protobuf/timestamp.proto";
import "validator_set.proto";
import "tx.proto";

message BlockHeader {
  uint64 height = 1;
  bytes hash = 2;
  bytes network_id = 3;
  google.protobuf.Timestamp time = 4;
  uint64 num_txs = 5;
  uint64 total_txs = 6;
  bytes last_block_hash = 7;
  bytes state_root = 8;
  bytes transaction_root = 9;
  bytes validator_root = 10;
  bytes next_validator_root = 11;
  bytes proposer_address = 12;
  bytes quorum_certificate = 13;
}

message Block {
  BlockHeader blockHeader = 1;
  repeated bytes transactions = 2;
}

message BlockResult {
  BlockHeader blockHeader = 1;
  repeated TxResult transactions = 2;
}

message BeginBlockParams {
  bytes proposerAddress = 1;
  repeated bytes badProposers = 2;
  repeated bytes nonSigners = 3;
  repeated bytes faultySigners = 4;
  repeated bytes doubleSigners = 5;
  ValidatorSet ValidatorSet = 6;
}

message EndBlockParams {
  ValidatorSet ValidatorSet = 1;
}
